--- a/catalog.html
+++ b/catalog.html
@@ -217,7 +217,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="button" type="submit">Показать</button>
+            <button class="button catalog-filter-button" type="submit">Показать</button>
           </form>
           <div class="catalog-columns">
             <div class="sorting-wrapper">
@@ -258,7 +258,7 @@
                 <li class="products-item" tabindex="0">
                   <img class="product-image"  src="img/catalog-3.jpg" alt="" width="360" height="380">
                   <div class="product-description">
-                    <h3 class="product-title">Непотопляемая
+                    <h3 class="product-title">Непотопляемая <br>
                       селфи-палка</h3>
                       <b class="product-price">2 500 ₽</b>
                     </div>
@@ -267,7 +267,7 @@
                 <li class="products-item" tabindex="0">
                   <img class="product-image"  src="img/catalog-4.jpg" alt="Селфи-палка в виде руки" width="360" height="380">
                   <div class="product-description">
-                    <h3 class="product-title">Селфи-палка «Следуй за мной»</h3>
+                    <h3 class="product-title">Селфи-палка «Следуй<br> за мной»</h3>
                     <b class="product-price">1 500 ₽</b>
                   </div>
                   <a class="button product-button" href="#">Подробнее</a>
@@ -306,7 +306,7 @@
 
     <footer class="page-footer">
       <div class="page-wrapper">
-        <a class="logo-link" href="index.html">
+        <a class="logo-link footer-logo-link" href="index.html">
           <img class="logo-img" src="img/footer-logo.svg" alt="Логотип Device" width="145" height="36">
         </a>
         <div class="footer-middle">
@@ -322,7 +322,7 @@
               <a href="#">Контакты</a>
             </li>
           </ul>
-          <a class="footer-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+          <a class="footer-phone" href="tel:88128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
         <div class="footer-bottom">
           <ul class="footer-social">
