Небольшие корректировки по тексту

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <a href="#">Виртуальная реальность</a>
             </li>
             <li class="catalog-item catalog_monopode">
-              <a href="catalog.html">Моноподы для селфи</a>
+              <a href="catalog.html">Моноподы<br> для селфи</a>
             </li>
             <li class="catalog-item catalog_action-cam">
               <a href="#">Экшн-камеры</a>
@@ -295,7 +295,7 @@
             <li>СДИК</li>
             <li>ТоксБерри</li>
           </ul>
-          <a class="button about-button" href="">Подробнее о нас</a>
+          <a class="button about-button" href="#">Подробнее о нас</a>
         </section>
 
         <section class="contacts">
@@ -320,7 +320,7 @@
         <div class="page-wrapper">
           <div class="newsletter-intro">
             <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-            <p class="newsletter-description">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+            <p class="newsletter-description">Еженедельный дайджест с обзорами новинок, <br> длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           </div>
           <div class="newsletter-form-wrapper">
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -352,7 +352,7 @@
               <a href="#">Контакты</a>
             </li>
           </ul>
-          <a class="footer-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+          <a class="footer-phone" href="tel:88128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
         <div class="footer-bottom">
           <ul class="footer-social">
@@ -434,18 +434,18 @@
             <div class="input-wrapper">
               <div class="quantity-wrapper quantity-label">
                 <label for="quantity">Количество:</label>
-                <button class="tooltip-button">
+                <button class="tooltip-button">i
                   <span class="visually-hidden">Дополнительная информация про возможное количество</span>
                 </button>
                 <p class="tooltip-text">Постараемся найти, сколько нужно. Привезём сколько получится по требованиям <br>
             к провозу багажа.</p>
               </div>
               <div class="quantity-wrapper">
-                <button class="quantity-button quantity-decrease" type="button">-
+                <button class="quantity-button quantity-decrease" type="button">
                   <span class="visually-hidden">Уменьшить количество</span>
                 </button>
                 <input class="delivery-quantity" type="number" name="order" id="quantity" value="1">
-                <button class="quantity-button quantity-increase" type="button">+
+                <button class="quantity-button quantity-increase" type="button">
                   <span class="visually-hidden">Увеличить количество</span>
                 </button>
               </div>
