Прописаны типы для кнопок

--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
                       <img src="img/cart-product-2.jpg" alt="" width="39" height="43">
                       <h3>Профессиональная селфи-палка</h3>
                     </a>
-                    <button class="cart-delete-button"  type="button">
+                    <button class="cart-delete-button" type="button">
                       <span class="visually-hidden">Удалить из корзины</span>
                     </button>
                   </li>
@@ -230,10 +230,10 @@
                   <option value="sorting-expensive">Сначала дорогие</option>
                 </select>
               </form>
-              <button class="sorting-button sorting-button-cheap">
+              <button class="sorting-button sorting-button-cheap" type="button">
                 <span class="visually-hidden">Сначала дешевые</span>
               </button>
-              <button class="sorting-button sorting-button-expensive">
+              <button class="sorting-button sorting-button-expensive" type="button">
                 <span class="visually-hidden">Сначала дорогие</span>
               </button>
             </div>
