--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       <img src="img/cart-product-2.jpg" alt="" width="39" height="43">
                       <h3>Профессиональная селфи-палка</h3>
                     </a>
-                    <button class="cart-delete-button"  type="button">
+                    <button class="cart-delete-button" type="button">
                       <span class="visually-hidden">Удалить из корзины</span>
                     </button>
                   </li>
@@ -435,7 +435,7 @@
             <div class="input-wrapper">
               <div class="quantity-wrapper quantity-label">
                 <label for="quantity">Количество:</label>
-                <button class="tooltip-button">i
+                <button class="tooltip-button" type="button">i
                   <span class="visually-hidden">Дополнительная информация про возможное количество</span>
                 </button>
                 <p class="tooltip-text">Постараемся найти, сколько нужно. Привезём сколько получится по требованиям <br>
