--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <ul class="slider-list">
             <li class="slider-item">
               <div class="slider-img-wrapper">
-                <img class="slider-img" src="img/slider-1.png" alt="Квадрокоптер" width="560" height="560">
+                <img class="slider-img" src="img/slider-1.png" alt="Квадрокоптер с лазером." width="560" height="560">
                 <div class="slider-buttons">
                   <button class="slider-button slider-button-prev" type="button">
                     <span class="visually-hidden">Предыдущее фото</span>
@@ -149,7 +149,7 @@
 
            <li class="slider-item" hidden>
               <div class="slider-img-wrapper">
-                <img class="slider-img" src="img/slider-2.png" alt="Фитнес-браслет" width="560" height="560">
+                <img class="slider-img" src="img/slider-2.png" alt="Мотивирующий фитнес-браслет." width="560" height="560">
                 <div class="slider-buttons">
                   <button class="slider-button slider-button-prev" type="button">
                     <span class="visually-hidden">Предыдущее фото</span>
@@ -174,7 +174,7 @@
 
             <li class="slider-item" hidden>
               <div class="slider-img-wrapper">
-                <img class="slider-img" src="img/slider-3.png" alt="Палка для селфи" width="560" height="560">
+                <img class="slider-img" src="img/slider-3.png" alt="Самая длинная палка для селфи." width="560" height="560">
                 <div class="slider-buttons">
                   <button class="slider-button slider-button-prev" type="button">
                     <span class="visually-hidden">Предыдущее фото</span>
