Скорректированы поля формы
Изменено название у количества, в подписке добавлен атрибут required

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           <div class="newsletter-form-wrapper">
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="newsletter-email">Ваш Email</label>
-              <input class="newsletter-email" type="email" name="email" id="newsletter-email" placeholder="Ваш e-mail">
+              <input class="newsletter-email" type="email" name="email" id="newsletter-email" placeholder="Ваш e-mail" required>
               <button type="submit">Подписаться</button>
             </form>
             <p class="newsletter-free">Это бесплатно</p>
@@ -430,7 +430,7 @@
           <div class="modal-delivery-wrapper">
             <div class="input-wrapper">
               <label for="delivery-goods">Что нужно привезти:</label>
-              <input class="delivery-goods" type="text" name="order" id="delivery-goods"  placeholder="В свободной форме">
+              <input class="delivery-goods" type="text" name="order" id="delivery-goods" placeholder="В свободной форме">
             </div>
 
             <div class="input-wrapper">
@@ -446,7 +446,7 @@
                 <button class="quantity-button quantity-decrease" type="button">
                   <span class="visually-hidden">Уменьшить количество</span>
                 </button>
-                <input class="delivery-quantity" type="number" name="order" id="quantity" value="1">
+                <input class="delivery-quantity" type="number" name="quantity" id="quantity" value="1">
                 <button class="quantity-button quantity-increase" type="button">
                   <span class="visually-hidden">Увеличить количество</span>
                 </button>
